show reviews again/fix stat-container and info container wrong position when no characters

--- a/src/details/details.css
+++ b/src/details/details.css
@@ -134,7 +134,7 @@ h2{
   display: flex;
   flex-direction: column;
   width: 600px;
-  margin-top: 30px;
+  margin-top: 0px;
   gap: 50px;
   margin-left: 100px;
   clear: both;
@@ -408,10 +408,9 @@ h2{
   display: grid;
   grid-template-columns: repeat(7,1fr);
   gap: 10px;
-  float: left;
   margin-top: 30px; 
   margin-left: 100px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   animation: fadeIn 0.5s ease-out;
 }
 
@@ -476,6 +475,7 @@ a{
   background-color: #282828;
   border: 1px solid var(--gray7);
   border-radius: 10px;
+  max-height: 340px;
   height: auto;
   width: 400px;
   line-height: 45px;
